--- a/src/components/CSS/Cart.css
+++ b/src/components/CSS/Cart.css
@@ -1,3 +1,13 @@
-.MuiGrid-root{
-    flex-wrap: nowrap;
+.checkout{
+    display: inline-block;
+    margin: 20px;
+    height: 100%;
+}
+.description{
+    margin: 10px 25px;
+    position: center;
+}
+.hor{
+    display: flex;
+    margin-top: 50px;
 }
