--- a/src/components/CSS/Login.css
+++ b/src/components/CSS/Login.css
@@ -1,7 +1,19 @@
 
-
+.box{
+    width: 50%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+}
+.row{
+    width: 578px;
+}
+.card-header{
+    text-align: center;
+    font-size: larger;
+    font-weight:bolder;
+}
 .form {
-    max-width: 330px;
     margin: 20px auto;
     display: flex;
     flex-direction: column;
@@ -10,16 +22,19 @@
     
   }
   .body-form{
-      width: 700px;
+   width: 700px;
    height: 400px;
   }
-
-
   .inp{
-      margin: 10px 0 20px 0 ;
-  }
-  .card-header{
-      text-align: center;
-      font-size: larger;
-      font-weight:bolder;
-  }
+    margin: 10px 0 20px 0;
+    display: inline-block;
+}
+
+.btnSign{
+    display: inline-block;
+}
+
+
+ 
+
+
